меняю на безопасный протокол
К http добавил s

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <!-- страница -->
 <body>
      <!-- подключаем библиотеку jQuery -->
-     <script src="http://dir.by/example_lib/jquery/jquery-3.3.1.min.js"></script>
+     <script src="https://dir.by/example_lib/jquery/jquery-3.3.1.min.js"></script>
     
      <!-- html элементы -->
      <p style='color:green; font-size:26px;'>Hello!</p>
