--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <script type="text/javascript">
 function show_alert()
 {
-alert("Привет! Я сигнальное окно!");
+alert("Привет! Я сигнальное окно! Hello!!!");
 }
 </script>
 </head>
